<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr02_20171.labscm20171.PersonalInfo">

    <TextView
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="40dp"
        android:text="@string/name_label"
        />
    <EditText
        android:id="@+id/edit_text_Name"
        android:layout_width="match_parent"
        android:inputType="textCapWords|textNoSuggestions"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:hint="@string/name_hint"
        />
    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="match_parent"
        android:inputType="textCapWords|textNoSuggestions"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:layout_marginRight="80dp"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <RadioButton android:id="@+id/radio_male"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/male"
         android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_female"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/female"
         android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
</LinearLayout>
