<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr02_20171.labscm20171.OtherInfo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherInfoTitle"
            android:layout_marginBottom="14dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxRead"
                android:layout_weight="1"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarRead"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:numStars="5"
                android:stepSize="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/watchTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxWatchTV"
                android:layout_weight="1"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarReadWatchTV"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:numStars="5"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/Dance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxDance"
                android:layout_weight="1"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarDance"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:numStars="5"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/sing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxSing"
                android:layout_weight="1"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarSing"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:numStars="5"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/Swimming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxSwimming"
                android:layout_weight="1"
               />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarSwimming"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:numStars="5"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="20dp">

            <Button
                android:text="@string/show"
                android:layout_width="182dp"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
